--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/circled-b.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100|Open+Sans:300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-</head>
 <body>
   <app-root></app-root>
   <!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> -->
+  <script src="https://kit.fontawesome.com/b5051fdcb5.js" crossorigin="anonymous"></script></head>
 </body>
 </html>
